--- a/index.html
+++ b/index.html
@@ -6,5 +6,23 @@
     <link rel="stylesheet" href="style.css" />
     <title>Git-Practice</title>
   </head>
-  <body></body>
+  <body>
+    <h2>Git Commands</h2>
+    <p>
+        <ul>
+            <li>git init => initialize a git repo</li>
+            <li>git add => add all the files present in current folder to the repo</li>
+            <li>git commit -m "" => commit process</li>
+            <li>git remote add origin 'url' => adding remotely to the repo</li>
+            <li>git branch => checking the current branch</li>
+            <li>git branch -M main => changing branch to 'main'</li>
+            <li>git push -u origin main => pushing into the main</li>
+            <li>git checkout -b 'name' => creating a new branch</li>
+            <li>git checkout 'name' => switching to another branch</li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </p>
+  </body>
 </html>
