--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
             <li>git push -u origin main => pushing into the main</li>
             <li>git checkout -b 'name' => creating a new branch</li>
             <li>git checkout 'name' => switching to another branch</li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>git merge 'name' => merging one branch into another</li>
         </ul>
     </p>
   </body>
